--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "webRoot": "${workspaceFolder}"
+            "name": "Open index.html",
+            "file": "c:\\Users\\joaop\\OneDrive\\Documentos\\GitHub\\Projetos-do-curso\\Project_03\\index.html"
         }
     ]
 }
